fix: Remove horizontal jitter
vw -> % This removes the horizontal scroll bar and the anoying horizontal shaking.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 *,
 *:before,
 *:after {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 :root {
@@ -34,8 +34,8 @@
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100dvh;
     margin: 0;
     padding: 2rem;
     color: var(--text-color);
@@ -77,7 +77,8 @@ a {
     text-decoration: underline;
 }
 
-a[href^="mailto"]::after, a[href^="https"]:not([href^="https://luka.ljudi.org"])::after {
+a[href^="mailto"]::after,
+a[href^="https"]:not([href^="https://luka.ljudi.org"])::after {
     content: "↗";
     margin-left: 4px;
 }
@@ -104,6 +105,6 @@ pre {
     border: 1px solid var(--border-color);
     border-radius: 4px;
     padding: 8px;
-	overflow-x: auto;
-	overflow-y: clip;
+    overflow-x: auto;
+    overflow-y: clip;
 }
